fix(themes): fix existing main usages colors in mj/mg themes
- MG CTA colors didn't match the Figma
- MG Primary colors didn't match the Figma and weren't ref colors
- MJ CTA colors were one shade too light compared to Figma

--- a/themes/cpaas-mailgun/sys.css
+++ b/themes/cpaas-mailgun/sys.css
@@ -4,14 +4,14 @@
   --sinch-sys-color-container-disabled: #FFFFFF;
   --sinch-sys-color-container-foreground: var(--sinch-ref-color-neutral-950);
   --sinch-sys-color-container-hover: var(--sinch-ref-color-neutral-50);
-  --sinch-sys-color-cta-active: #EB5454;
-  --sinch-sys-color-cta-default: #BD3C41;
-  --sinch-sys-color-cta-disabled: #BD3C4166;
+  --sinch-sys-color-cta-active: var(--sinch-ref-color-raspberry-600);
+  --sinch-sys-color-cta-default: var(--sinch-ref-color-raspberry-500);
+  --sinch-sys-color-cta-disabled: #EB545466;
   --sinch-sys-color-cta-foreground: #FFFFFF;
-  --sinch-sys-color-cta-hover: #993138;
-  --sinch-sys-color-primary-active: #0D304A;
-  --sinch-sys-color-primary-default: #145A8F;
-  --sinch-sys-color-primary-disabled: #145A8F66;
+  --sinch-sys-color-cta-hover: var(--sinch-ref-color-raspberry-400);
+  --sinch-sys-color-primary-active: var(--sinch-ref-color-ocean-800);
+  --sinch-sys-color-primary-default: var(--sinch-ref-color-ocean-700);
+  --sinch-sys-color-primary-disabled: #1454A866;
   --sinch-sys-color-primary-foreground: #FFFFFF;
-  --sinch-sys-color-primary-hover: #116FAD;
+  --sinch-sys-color-primary-hover: var(--sinch-ref-color-ocean-600);
 }
